04.myfirst-api-server/05.blue-green/deploy-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk152-myfirst-api-server-new
  namespace: class-5
  labels:
    app: sk152-myfirst-api-server-new
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sk152-myfirst-api-server-new
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8080'
        prometheus.io/path: '/python/prometheus'
        update: 9203dfd7
      labels:
        app: sk152-myfirst-api-server-new
    spec:
      containers:
      - name: webserver
        image: skala-registry.skala-ai.com/class-5/sk152-webserver:2.0
        imagePullPolicy: Always
