04.myfirst-api-server/05.blue-green/service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: sk152-myfirst-api-server-new
  namespace: class-5
  labels:
    app: sk152-myfirst-api-server-new
spec:
  selector:
    app: sk152-myfirst-api-server-new
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: mgmt
      protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
