04.myfirst-api-server/05.blue-green/ingress-blue.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
#  annotations:
#    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: sk152-myfirst-ingress
  namespace: class-5
  labels:
    app: sk152-myfirst-ingress
spec:
  ingressClassName: public-nginx
  rules:
  - host: sk152-ingress.class-5.skala-pg.com
    http:
      paths:
      - backend:
          service:
            name: sk152-myfirst-api-server
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
    - hosts:
      - sk152-ingress.class-5.skala-pg.com
      secretName: wildcard-class-5-skala-pg-com-tls
